--- a/day01_lecture.html
+++ b/day01_lecture.html
@@ -429,6 +429,11 @@
         </div>
     </main>
 
+    <!-- 완료 버튼 컨테이너 -->
+    <div class="max-w-4xl mx-auto px-6 mb-12">
+        <div id="completeButtonContainer"></div>
+    </div>
+
     <!-- Footer: 제조혁신 전문가 김사부 브랜드 -->
     <footer class="bg-slate-900 text-white py-16 px-6 mt-20">
         <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-8">
@@ -454,6 +459,7 @@
     <script type="module">
         import { auth } from './js/firebase-config.js';
         import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { addCompleteButton } from './js/progress-ui.js';
 
         onAuthStateChanged(auth, (user) => {
             if (!user) {
@@ -462,6 +468,10 @@
             } else {
                 const emailDisplay = document.getElementById('userEmailDisplay');
                 if (emailDisplay) emailDisplay.innerText = user.email + "님 환영합니다";
+
+                // 완료 버튼 추가 (Day01, ai_concept)
+                // 참고: 실제로는 페이지마다 다른 lectureId를 지정해야 합니다
+                addCompleteButton(user.uid, 'day01', 'ai_concept', 'completeButtonContainer');
             }
         });
     </script>
