--- a/day04_audio_synthesis.html
+++ b/day04_audio_synthesis.html
@@ -17,6 +17,7 @@
             background: linear-gradient(135deg, #d97706 0%, #b45309 100%);
         }
     </style>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body class="bg-slate-50">
@@ -75,14 +76,21 @@
 </body>
 
 </html>
+    
     <script type="module">
         import { auth } from './js/firebase-config.js';
         import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { addCompleteButton } from './js/progress-ui.js';
+        import { initAuth } from './js/auth-common.js';
+
+        // ê³µí†µ ì¸ì¦ ì´ˆê¸°í™”
+        initAuth();
 
         onAuthStateChanged(auth, (user) => {
-            if (!user) {
-                alert("È¸¿ø Àü¿ë °­ÀÇÀÔ´Ï´Ù. ·Î±×ÀÎ ÈÄ ÀÌ¿ëÇØÁÖ¼¼¿ä.");
-                window.location.href = 'index.html';
+            if (user) {
+                // ì™„ë£Œ ë²„íŠ¼ ì¶”ê°€ (ìë™ìœ¼ë¡œ dayì™€ lectureId ë§¤í•‘)
+                addCompleteButton(user.uid, 'day04', 'audio_synthesis', 'completeButtonContainer');
             }
         });
     </script>
+
