--- a/day01_research_method.html
+++ b/day01_research_method.html
@@ -102,6 +102,7 @@
             font-weight: 700;
         }
     </style>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body class="py-20">
@@ -264,7 +265,9 @@
     </main>
 
     <!-- Footer -->
-    <footer class="max-w-4xl mx-auto mt-32 py-16 px-6 border-t border-slate-100 text-center text-slate-400">
+    
+    <div class="max-w-4xl mx-auto px-6 mb-12"><div id="completeButtonContainer"></div></div>
+<footer class="max-w-4xl mx-auto mt-32 py-16 px-6 border-t border-slate-100 text-center text-slate-400">
         <p class="font-bold text-slate-800 mb-2 italic tracking-tighter text-xl">MASTER KIM AI CLASS</p>
         <p class="text-xs uppercase tracking-widest font-bold">ì œì¡°í˜ì‹  ì „ë¬¸ê°€ ê¹€ì‚¬ë¶€ DX ê°€ì´ë“œë¼ì¸ &copy; 2026</p>
     </footer>
@@ -272,14 +275,21 @@
 </body>
 
 </html>
+    
     <script type="module">
         import { auth } from './js/firebase-config.js';
         import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { addCompleteButton } from './js/progress-ui.js';
+        import { initAuth } from './js/auth-common.js';
+
+        // ê³µí†µ ì¸ì¦ ì´ˆê¸°í™”
+        initAuth();
 
         onAuthStateChanged(auth, (user) => {
-            if (!user) {
-                alert("È¸¿ø Àü¿ë °­ÀÇÀÔ´Ï´Ù. ·Î±×ÀÎ ÈÄ ÀÌ¿ëÇØÁÖ¼¼¿ä.");
-                window.location.href = 'index.html';
+            if (user) {
+                // ì™„ë£Œ ë²„íŠ¼ ì¶”ê°€ (ìë™ìœ¼ë¡œ dayì™€ lectureId ë§¤í•‘)
+                addCompleteButton(user.uid, 'day01', 'research_method', 'completeButtonContainer');
             }
         });
     </script>
+
