--- a/day02_gems_ai.html
+++ b/day02_gems_ai.html
@@ -22,6 +22,7 @@
             background: linear-gradient(135deg, #059669 0%, #0f766e 100%);
         }
     </style>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body class="bg-slate-50 text-slate-900">
@@ -90,11 +91,31 @@
         </section>
     </main>
 
-    <footer class="bg-white border-t border-slate-200 py-12">
+    
+    <div class="max-w-4xl mx-auto px-6 mb-12"><div id="completeButtonContainer"></div></div>
+<footer class="bg-white border-t border-slate-200 py-12">
         <div class="max-w-4xl mx-auto px-6 text-center text-slate-400 text-sm">
             &copy; 2026 AI 실무 마스터 클래스. All Rights Reserved.
         </div>
     </footer>
+
+    <script type="module">
+        import { auth } from './js/firebase-config.js';
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { addCompleteButton } from './js/progress-ui.js';
+        import { initAuth } from './js/auth-common.js';
+
+        // 공통 인증 초기화
+        initAuth();
+
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // 완료 버튼 추가 (자동으로 day와 lectureId 매핑)
+                addCompleteButton(user.uid, 'day02', 'gems_ai', 'completeButtonContainer');
+            }
+        });
+    </script>
+
 </body>
 
 </html>
