--- a/day02_practice_gems.html
+++ b/day02_practice_gems.html
@@ -25,6 +25,7 @@
             border-left: 4px solid #10b981;
         }
     </style>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body class="bg-slate-50 text-slate-900">
@@ -130,7 +131,9 @@
         </section>
     </main>
 
-    <footer class="bg-white border-t border-slate-200 py-12 mt-20">
+    
+    <div class="max-w-4xl mx-auto px-6 mb-12"><div id="completeButtonContainer"></div></div>
+<footer class="bg-white border-t border-slate-200 py-12 mt-20">
         <div class="max-w-4xl mx-auto px-4 text-center">
             <p class="text-slate-500 mb-2 text-sm font-semibold tracking-tighter">제조혁신 길라잡이 김사부 X AI 실무 마스터 클래스</p>
         </div>
@@ -154,6 +157,24 @@
             }, 2000);
         }
     </script>
+
+    <script type="module">
+        import { auth } from './js/firebase-config.js';
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { addCompleteButton } from './js/progress-ui.js';
+        import { initAuth } from './js/auth-common.js';
+
+        // 공통 인증 초기화
+        initAuth();
+
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // 완료 버튼 추가 (자동으로 day와 lectureId 매핑)
+                addCompleteButton(user.uid, 'day02', 'practice_gems', 'completeButtonContainer');
+            }
+        });
+    </script>
+
 </body>
 
 </html>
