--- a/day02_prompt_principles.html
+++ b/day02_prompt_principles.html
@@ -128,6 +128,7 @@
             top: 20px;
         }
     </style>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body class="py-20">
@@ -349,22 +350,31 @@
     </main>
 
     <!-- Footer -->
-    <footer class="max-w-4xl mx-auto mt-32 py-16 px-6 border-t border-slate-100 text-center text-slate-400">
+    
+    <div class="max-w-4xl mx-auto px-6 mb-12"><div id="completeButtonContainer"></div></div>
+<footer class="max-w-4xl mx-auto mt-32 py-16 px-6 border-t border-slate-100 text-center text-slate-400">
         <p class="font-bold text-slate-800 mb-2 italic tracking-tighter text-xl uppercase">Master Kim AI Consulting</p>
         <p class="text-[10px] uppercase tracking-widest font-bold">Lean, 6Sigma, AI & Big Data Analysis &copy; 2026</p>
     </footer>
 
+    
     <script type="module">
         import { auth } from './js/firebase-config.js';
         import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { addCompleteButton } from './js/progress-ui.js';
+        import { initAuth } from './js/auth-common.js';
+
+        // 공통 인증 초기화
+        initAuth();
 
         onAuthStateChanged(auth, (user) => {
-            if (!user) {
-                alert("회원 전용 강의입니다. 로그인 후 이용해주세요.");
-                window.location.href = 'index.html';
+            if (user) {
+                // 완료 버튼 추가 (자동으로 day와 lectureId 매핑)
+                addCompleteButton(user.uid, 'day02', 'prompt_principles', 'completeButtonContainer');
             }
         });
     </script>
+
 </body>
 
 </html>
