--- a/day03_practice_sns.html
+++ b/day03_practice_sns.html
@@ -28,6 +28,7 @@
             box-shadow: 0 12px 24px -8px rgba(147, 51, 234, 0.2);
         }
     </style>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body class="bg-slate-50 text-slate-900 leading-relaxed">
@@ -259,12 +260,32 @@ high-end aesthetic, --ar 1:1 --v 6 --style raw</pre>
         </div>
     </main>
 
-    <footer class="bg-slate-900 text-white py-12 px-6 mt-20">
+    
+    <div class="max-w-4xl mx-auto px-6 mb-12"><div id="completeButtonContainer"></div></div>
+<footer class="bg-slate-900 text-white py-12 px-6 mt-20">
         <div class="max-w-4xl mx-auto text-center">
             <h4 class="text-xl font-black mb-2 tracking-tighter italic">MASTER KIM AI CONSULTING</h4>
             <p class="text-slate-400 text-sm">제조혁신 전문가가 전수하는 실무 중심 AI 교육</p>
         </div>
     </footer>
+
+    <script type="module">
+        import { auth } from './js/firebase-config.js';
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { addCompleteButton } from './js/progress-ui.js';
+        import { initAuth } from './js/auth-common.js';
+
+        // 공통 인증 초기화
+        initAuth();
+
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // 완료 버튼 추가 (자동으로 day와 lectureId 매핑)
+                addCompleteButton(user.uid, 'day03', 'practice_sns', 'completeButtonContainer');
+            }
+        });
+    </script>
+
 </body>
 
 </html>
