--- a/day08_practice_final.html
+++ b/day08_practice_final.html
@@ -18,6 +18,7 @@
             background: linear-gradient(to bottom right, #fff1f2, #fbcfe8);
         }
     </style>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body class="bg-slate-50 text-slate-900 leading-relaxed">
@@ -61,6 +62,24 @@
         <p class="text-slate-400 text-sm italic">"The journey of a thousand miles begins with a single step, and you
             have just completed a giant leap."</p>
     </main>
+
+    <script type="module">
+        import { auth } from './js/firebase-config.js';
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { addCompleteButton } from './js/progress-ui.js';
+        import { initAuth } from './js/auth-common.js';
+
+        // 공통 인증 초기화
+        initAuth();
+
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // 완료 버튼 추가 (자동으로 day와 lectureId 매핑)
+                addCompleteButton(user.uid, 'day08', 'practice_final', 'completeButtonContainer');
+            }
+        });
+    </script>
+
 </body>
 
 </html>
