--- a/day08_practice_project.html
+++ b/day08_practice_project.html
@@ -19,6 +19,7 @@
             padding: 12px 0;
         }
     </style>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body class="bg-slate-50 text-slate-900 leading-relaxed">
@@ -69,6 +70,24 @@
             <p class="text-sm text-rose-700">"완벽함보다 완성이 중요합니다. 최소한의 핵심 가치를 전달할 수 있다면 그것으로 충분합니다."</p>
         </div>
     </main>
+
+    <script type="module">
+        import { auth } from './js/firebase-config.js';
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { addCompleteButton } from './js/progress-ui.js';
+        import { initAuth } from './js/auth-common.js';
+
+        // 공통 인증 초기화
+        initAuth();
+
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // 완료 버튼 추가 (자동으로 day와 lectureId 매핑)
+                addCompleteButton(user.uid, 'day08', 'practice_project', 'completeButtonContainer');
+            }
+        });
+    </script>
+
 </body>
 
 </html>
