feat: Add personalized 'Summary & Next Steps' section to all lecture pages

--- a/day01_gemini.html
+++ b/day01_gemini.html
@@ -351,9 +351,7 @@
         <section
             class="bg-white rounded-[32px] p-12 text-center border border-slate-100 shadow-2xl shadow-slate-100 mt-20">
             <h3 class="text-4xl font-black text-slate-900 mb-6 tracking-tight">강의 요약 및 다음 단계</h3>
-            <p class="text-slate-500 text-lg md:text-xl font-medium mb-12">
-                AI 도입은 선택이 아닌 필수입니다. 우리 조직에 맞는 전략을 고민해보세요.
-            </p>
+            <p class="text-slate-500 text-lg md:text-xl font-medium mb-12">Gemini의 멀티모달 기능을 활용하여 텍스트와 이미지를 넘나드는 작업을 시도해보세요.</p>
             <div class="flex flex-col md:flex-row justify-center gap-5">
                 <button
                     class="btn-pdf text-white px-10 py-5 rounded-2xl font-bold text-lg flex items-center justify-center gap-3 shadow-lg shadow-indigo-100">
