--- a/day01_ai_caution.html
+++ b/day01_ai_caution.html
@@ -229,7 +229,7 @@
         <!-- Summary & Action -->
         <section class="bg-slate-50 rounded-3xl p-10 text-center border border-slate-200 mt-24">
             <h3 class="text-2xl font-bold mb-4">강의 요약 및 다음 단계</h3>
-            <p class="text-slate-600 mb-8">안전하고 똑똑한 AI 활용, 당신의 경쟁력이 됩니다.</p>
+            <p class="text-slate-600 mb-8">AI의 기초를 다졌습니다. 이제 실무 적용을 시작해보세요.</p>
             <div class="flex flex-wrap justify-center gap-4">
                 <button onclick="alert('교재 PDF 준비 중입니다.')"
                     class="px-6 py-3 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors flex items-center gap-2">
