--- a/day01_ai_concept.html
+++ b/day01_ai_concept.html
@@ -481,7 +481,7 @@
         <!-- Summary & Action -->
         <section class="bg-slate-50 rounded-3xl p-10 text-center border border-slate-200">
             <h3 class="text-2xl font-bold mb-4">강의 요약 및 다음 단계</h3>
-            <p class="text-slate-600 mb-8">기술의 원리를 이해하는 것이 효과적인 프롬프팅의 시작입니다.</p>
+            <p class="text-slate-600 mb-8">생성형 AI의 기본 원리와 작동 방식을 이해하는 것이 혁신의 첫걸음입니다.</p>
             <div class="flex flex-wrap justify-center gap-4">
                 <button onclick="alert('교재 PDF 준비 중입니다.')"
                     class="px-6 py-3 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors flex items-center gap-2">
