--- a/day01_ai_ethics.html
+++ b/day01_ai_ethics.html
@@ -263,7 +263,7 @@
         <!-- Summary & Action -->
         <section class="bg-slate-50 rounded-3xl p-10 text-center border border-slate-200 mt-12">
             <h3 class="text-2xl font-bold mb-4">강의 요약 및 다음 단계</h3>
-            <p class="text-slate-600 mb-8">AI 윤리는 안전한 혁신의 첫걸음입니다.</p>
+            <p class="text-slate-600 mb-8">AI 윤리를 준수하며 책임감 있게 기술을 활용하는 자세가 중요합니다.</p>
             <div class="flex flex-wrap justify-center gap-4">
                 <button onclick="alert('교재 PDF 준비 중입니다.')"
                     class="px-6 py-3 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors flex items-center gap-2">
