--- a/day01_ai_trends.html
+++ b/day01_ai_trends.html
@@ -294,7 +294,7 @@
         <!-- Summary & Action -->
         <section class="bg-slate-50 rounded-3xl p-10 text-center border border-slate-200">
             <h3 class="text-2xl font-bold mb-4">강의 요약 및 다음 단계</h3>
-            <p class="text-slate-600 mb-8">AI 도입은 선택이 아닌 필수입니다. 우리 조직에 맞는 전략을 고민해보세요.</p>
+            <p class="text-slate-600 mb-8">급변하는 AI 트렌드를 파악하고 비즈니스 기회를 포착하는 안목을 길렀습니다.</p>
             <div class="flex flex-wrap justify-center gap-4">
                 <button onclick="alert('교재 PDF 준비 중입니다.')"
                     class="px-6 py-3 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors flex items-center gap-2">
