--- a/day01_notebooklm.html
+++ b/day01_notebooklm.html
@@ -247,9 +247,7 @@
         <section
             class="bg-white rounded-[32px] p-12 text-center border border-slate-100 shadow-2xl shadow-slate-100 mt-20">
             <h3 class="text-4xl font-black text-slate-900 mb-6 tracking-tight">강의 요약 및 다음 단계</h3>
-            <p class="text-slate-500 text-lg md:text-xl font-medium mb-12">
-                나만의 지식 베이스를 구축할 준비가 되셨나요? 이제 실습을 통해 경험해보세요.
-            </p>
+            <p class="text-slate-500 text-lg md:text-xl font-medium mb-12">방대한 문서를 NotebookLM으로 분석하여 인사이트를 도출하는 방법을 익혔습니다.</p>
             <div class="flex flex-col md:flex-row justify-center gap-5">
                 <button
                     class="btn-pdf text-white px-10 py-5 rounded-2xl font-bold text-lg flex items-center justify-center gap-3 shadow-lg shadow-indigo-100">
