--- a/day01_research_method.html
+++ b/day01_research_method.html
@@ -247,9 +247,7 @@
         <section
             class="bg-white rounded-[32px] p-12 text-center border border-slate-100 shadow-2xl shadow-slate-100 mt-20">
             <h3 class="text-4xl font-black text-slate-900 mb-6 tracking-tight">강의 요약 및 다음 단계</h3>
-            <p class="text-slate-500 text-lg md:text-xl font-medium mb-12">
-                신뢰성 있는 리서치는 성공적인 비즈니스의 초석입니다.
-            </p>
+            <p class="text-slate-500 text-lg md:text-xl font-medium mb-12">AI의 기초를 다졌습니다. 이제 실무 적용을 시작해보세요.</p>
             <div class="flex flex-col md:flex-row justify-center gap-5">
                 <button
                     class="btn-pdf text-white px-10 py-5 rounded-2xl font-bold text-lg flex items-center justify-center gap-3 shadow-lg shadow-indigo-100">
