--- a/day02_prompt_principles.html
+++ b/day02_prompt_principles.html
@@ -332,9 +332,7 @@
         <section
             class="bg-white rounded-[32px] p-12 text-center border border-slate-100 shadow-2xl shadow-slate-100 mt-20">
             <h3 class="text-4xl font-black text-slate-900 mb-6 tracking-tight">강의 요약 및 다음 단계</h3>
-            <p class="text-slate-500 text-lg md:text-xl font-medium mb-12">
-                이제 설계된 프롬프트를 통해 실제 업무 자동화 도구를 직접 만들어 볼 차례입니다.
-            </p>
+            <p class="text-slate-500 text-lg md:text-xl font-medium mb-12">기술의 원리를 이해하는 것이 효과적인 프롬프팅의 시작입니다.</p>
             <div class="flex flex-col md:flex-row justify-center gap-5">
                 <button
                     class="btn-pdf text-white px-10 py-5 rounded-2xl font-bold text-lg flex items-center justify-center gap-3 shadow-lg shadow-indigo-100">
