--- a/day04_runway_gen3.html
+++ b/day04_runway_gen3.html
@@ -71,7 +71,24 @@
                     필수적입니다.</p>
             </div>
         </section>
-    </main>
+    
+    <!-- 강의 요약 및 다음 단계 섹션 (Auto-injected) -->
+    <div class="max-w-4xl mx-auto px-6 mb-8 mt-12 bg-white rounded-[32px] p-12 text-center border border-slate-100 shadow-2xl shadow-slate-100">
+        <h3 class="text-3xl md:text-4xl font-black text-slate-900 mb-6 tracking-tight">강의 요약 및 다음 단계</h3>
+        <p class="text-slate-500 text-lg md:text-xl font-medium mb-12 word-keep-all">최신 영상 생성 모델을 활용하여 상상 속의 장면을 현실감 있게 구현해보세요.</p>
+        <div class="flex flex-col md:flex-row justify-center gap-5">
+            <button onclick="alert('교재 파일 준비 중입니다.')" class="bg-[#5c4ae3] text-white px-10 py-5 rounded-2xl font-bold text-lg flex items-center justify-center gap-3 shadow-lg shadow-indigo-100 hover:bg-[#4a3bc2] transition-colors">
+                <i class="fas fa-file-pdf"></i> 교재 PDF 다운로드
+            </button>
+            <button onclick="location.href='classroom.html'" class="border-2 border-slate-200 text-[#5c4ae3] bg-white px-10 py-5 rounded-2xl font-bold text-lg hover:bg-indigo-50 hover:border-[#5c4ae3] transition-all">
+                강의실로 돌아가기
+            </button>
+        </div>
+    </div>
+
+<div class="max-w-4xl mx-auto px-6 mb-12"><div id="completeButtonContainer"></div></div>
+
+</main>
 </body>
 
 </html>
