--- a/day04_audio_synthesis.html
+++ b/day04_audio_synthesis.html
@@ -32,47 +32,52 @@
     </header>
 
     <main class="max-w-4xl mx-auto px-6 py-12 space-y-12">
+
         <section class="bg-white p-8 rounded-2xl shadow-sm border border-slate-200">
-            <h2 class="text-2xl font-bold text-slate-800 mb-6 border-b pb-4"><i
-                    class="fas fa-wave-square text-amber-600 mr-2"></i>TTS (Text-to-Speech)의 진화</h2>
-            <div class="space-y-6">
-                <div class="flex gap-4">
-                    <div class="w-24 font-bold text-slate-400">과거</div>
-                    <div class="flex-1">
-                        <h3 class="font-bold text-slate-700">Concatenative TTS</h3>
-                        <p class="text-sm text-slate-500">녹음된 단어를 조각조각 이어 붙인 방식. 부자연스럽고 억양 조절 불가능.</p>
-                    </div>
-                </div>
-                <div class="flex gap-4">
-                    <div class="w-24 font-bold text-amber-600">현재</div>
-                    <div class="flex-1">
-                        <h3 class="font-bold text-slate-800">Neural TTS (AI)</h3>
-                        <p class="text-sm text-slate-600">딥러닝 모델이 텍스트의 문맥과 감정을 이해하고, 성우의 발성 패턴을 모방하여 파형을 생성. 숨소리까지 재현.
-                        </p>
-                    </div>
-                </div>
+            <h2 class="text-2xl font-bold text-slate-800 mb-6 border-b pb-4"><i class="fas fa-wave-square text-indigo-600 mr-2"></i>Text-to-Speech (TTS)의 진화</h2>
+            <p class="text-slate-600 mb-4 leading-relaxed">
+                초기 TTS는 단순히 사전에 녹음된 음절을 이어 붙이는 방식(Concatenative)이라 기계음처럼 들렸습니다. 
+                최신 <strong>Neural TTS</strong>는 딥러닝 모델이 전체 문맥을 이해하고 성우의 호흡, 억양, 감정선까지 예측하여 생성합니다.
+            </p>
+            <div class="grid grid-cols-2 gap-4 text-center mt-6">
+                 <div class="bg-slate-100 p-4 rounded-xl">
+                    <div class="font-bold text-slate-500 mb-2">기존 방식</div>
+                    <div class="text-xs text-slate-400">"안.녕.하.세.요. 반.갑.습.니.다."</div>
+                 </div>
+                 <div class="bg-amber-100 p-4 rounded-xl border border-amber-200">
+                    <div class="font-bold text-amber-700 mb-2">AI Neural TTS</div>
+                    <div class="text-xs text-amber-600">"안녕하세요~! (밝게) 만나서 반가워요."</div>
+                 </div>
             </div>
         </section>
 
         <section class="bg-white p-8 rounded-2xl shadow-sm border border-slate-200">
-            <h2 class="text-2xl font-bold text-slate-800 mb-6 border-b pb-4"><i
-                    class="fas fa-sliders-h text-amber-600 mr-2"></i>음성 튜닝 요소</h2>
-            <div class="grid md:grid-cols-3 gap-6">
-                <div class="bg-amber-50 p-6 rounded-xl text-center">
-                    <div class="font-bold text-lg mb-2">Stability</div>
-                    <p class="text-xs text-slate-600">목소리의 떨림과 변동성을 조절. 높을수록 일관되고 차분하지만 단조로울 수 있음.</p>
-                </div>
-                <div class="bg-amber-50 p-6 rounded-xl text-center">
-                    <div class="font-bold text-lg mb-2">Similarity</div>
-                    <p class="text-xs text-slate-600">원본 성우의 목소리와 얼마나 비슷하게 할지 결정. 높을수록 원본과 똑같지만 잡음도 따라올 수 있음.</p>
-                </div>
-                <div class="bg-amber-50 p-6 rounded-xl text-center">
-                    <div class="font-bold text-lg mb-2">Style Exaggeration</div>
-                    <p class="text-xs text-slate-600">감정 표현의 과장 정도를 조절. 높을수록 드라마틱한 낭독 톤이 됨.</p>
-                </div>
-            </div>
+            <h2 class="text-2xl font-bold text-slate-800 mb-6 border-b pb-4"><i class="fas fa-sliders-h text-indigo-600 mr-2"></i>음성 합성 파라미터 튜닝</h2>
+            <ul class="space-y-6">
+                <li>
+                    <div class="flex justify-between font-bold mb-1">
+                        <span>Stability (안정성)</span>
+                        <span class="text-indigo-600">0.5 ~ 0.8 추천</span>
+                    </div>
+                    <div class="w-full bg-slate-200 rounded-full h-2">
+                        <div class="bg-indigo-600 h-2 rounded-full" style="width: 70%"></div>
+                    </div>
+                    <p class="text-xs text-slate-500 mt-2">너무 높으면 단조롭고, 너무 낮으면 목소리가 떨리거나 튈 수 있습니다.</p>
+                </li>
+                <li>
+                    <div class="flex justify-between font-bold mb-1">
+                        <span>Similarity (유사성)</span>
+                        <span class="text-indigo-600">0.7 ~ 0.9 추천</span>
+                    </div>
+                    <div class="w-full bg-slate-200 rounded-full h-2">
+                        <div class="bg-indigo-600 h-2 rounded-full" style="width: 85%"></div>
+                    </div>
+                    <p class="text-xs text-slate-500 mt-2">원본 목소리와의 일치도입니다. 너무 높으면 원본의 잡음까지 따라 할 수 있습니다.</p>
+                </li>
+            </ul>
         </section>
     
+
     <!-- 강의 요약 및 다음 단계 섹션 (Auto-injected) -->
     <div class="max-w-4xl mx-auto px-6 mb-8 mt-12 bg-white rounded-[32px] p-12 text-center border border-slate-100 shadow-2xl shadow-slate-100">
         <h3 class="text-3xl md:text-4xl font-black text-slate-900 mb-6 tracking-tight">강의 요약 및 다음 단계</h3>
