--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 
 <body class="bg-gray-50 relative">
 
+    <!-- Top Left - Back to Studio Main -->
+    <div class="absolute top-6 left-6 z-50">
+        <a href="studio_main.html"
+            class="bg-white/20 backdrop-blur-md border border-white/30 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-white/30 transition-all shadow-lg flex items-center gap-2">
+            <i class="fas fa-arrow-left"></i> 전체 과정 보기
+        </a>
+    </div>
+
     <!-- Top Right Buttons -->
     <div class="absolute top-6 right-6 z-50 flex gap-3">
         <button id="noticeBtn"
@@ -66,6 +74,10 @@
             <div class="absolute bottom-20 right-20 w-96 h-96 bg-white rounded-full blur-3xl"></div>
         </div>
         <div class="container mx-auto px-6 text-center relative z-10">
+            <span
+                class="inline-block px-4 py-2 bg-purple-600/80 rounded-full text-sm font-bold mb-4 backdrop-blur-sm border border-white/30">
+                <i class="fas fa-rocket mr-2"></i>중급 과정
+            </span>
             <span class="inline-block px-4 py-2 bg-white/20 rounded-full text-sm font-medium mb-6 backdrop-blur-sm">
                 <i class="fas fa-calendar-alt mr-2"></i>8일 완성 과정 · 이론 + 실습 + 앱 개발
             </span>
