feat: Add 5 specialized AI courses to studio main
- Add AI 마케팅 전문가 (Marketing Specialist)
- Add AI 데이터 분석가 (Data Analyst)
- Add AI 영상 크리에이터 (Video Creator)
- Add AI 비즈니스 컨설턴트 (Business Consultant)
- Add AI 챗봇 개발자 (Chatbot Developer)
- Update grid layout from 3 to 4 columns
- Total courses expanded from 3 to 8

--- a/studio_main.html
+++ b/studio_main.html
@@ -139,7 +139,7 @@
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-3 gap-8 max-w-7xl mx-auto">
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
                 <!-- 초급 과정 -->
                 <div class="course-card bg-white rounded-3xl p-8 border-2 border-blue-200 shadow-lg">
                     <div class="flex items-center justify-between mb-6">
@@ -282,6 +282,238 @@
 
                     <button
                         class="w-full py-4 bg-orange-600 text-white rounded-xl font-bold hover:bg-orange-700 transition-colors shadow-lg shadow-orange-200">
+                        자세히 보기
+                    </button>
+                </div>
+
+                <!-- 신규 과정 1: AI 마케팅 전문가 -->
+                <div class="course-card bg-white rounded-3xl p-8 border-2 border-pink-200 shadow-lg">
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="px-4 py-2 bg-pink-100 text-pink-700 rounded-full text-sm font-bold">특화 과정</span>
+                        <div class="w-16 h-16 bg-pink-100 rounded-2xl flex items-center justify-center">
+                            <i class="fas fa-bullhorn text-3xl text-pink-600"></i>
+                        </div>
+                    </div>
+
+                    <h3 class="text-2xl font-bold text-gray-800 mb-3">AI 마케팅 전문가</h3>
+                    <p class="text-gray-600 mb-6 leading-relaxed">
+                        AI로 마케팅 ROI 10배 향상시키기
+                    </p>
+
+                    <div class="space-y-3 mb-6">
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-pink-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">AI 콘텐츠 자동 생성</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-pink-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">고객 데이터 분석 & 타겟팅</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-pink-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">캠페인 자동화 시스템</span>
+                        </div>
+                    </div>
+
+                    <div class="border-t pt-6 mb-6">
+                        <div class="flex justify-between items-center mb-2">
+                            <span class="text-gray-600 text-sm">수강 기간</span>
+                            <span class="font-bold text-gray-800">6주</span>
+                        </div>
+                        <div class="flex justify-between items-center">
+                            <span class="text-gray-600 text-sm">수강료</span>
+                            <span class="font-bold text-gray-800 text-xl">₩600,000</span>
+                        </div>
+                    </div>
+
+                    <button
+                        class="w-full py-4 bg-pink-600 text-white rounded-xl font-bold hover:bg-pink-700 transition-colors shadow-lg shadow-pink-200">
+                        자세히 보기
+                    </button>
+                </div>
+
+                <!-- 신규 과정 2: AI 데이터 분석가 -->
+                <div class="course-card bg-white rounded-3xl p-8 border-2 border-cyan-200 shadow-lg">
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="px-4 py-2 bg-cyan-100 text-cyan-700 rounded-full text-sm font-bold">특화 과정</span>
+                        <div class="w-16 h-16 bg-cyan-100 rounded-2xl flex items-center justify-center">
+                            <i class="fas fa-chart-line text-3xl text-cyan-600"></i>
+                        </div>
+                    </div>
+
+                    <h3 class="text-2xl font-bold text-gray-800 mb-3">AI 데이터 분석가</h3>
+                    <p class="text-gray-600 mb-6 leading-relaxed">
+                        데이터 기반 의사결정 마스터하기
+                    </p>
+
+                    <div class="space-y-3 mb-6">
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-cyan-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">Python & Pandas 기초</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-cyan-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">AI 예측 모델 구축</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-cyan-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">대시보드 시각화</span>
+                        </div>
+                    </div>
+
+                    <div class="border-t pt-6 mb-6">
+                        <div class="flex justify-between items-center mb-2">
+                            <span class="text-gray-600 text-sm">수강 기간</span>
+                            <span class="font-bold text-gray-800">8주</span>
+                        </div>
+                        <div class="flex justify-between items-center">
+                            <span class="text-gray-600 text-sm">수강료</span>
+                            <span class="font-bold text-gray-800 text-xl">₩900,000</span>
+                        </div>
+                    </div>
+
+                    <button
+                        class="w-full py-4 bg-cyan-600 text-white rounded-xl font-bold hover:bg-cyan-700 transition-colors shadow-lg shadow-cyan-200">
+                        자세히 보기
+                    </button>
+                </div>
+
+                <!-- 신규 과정 3: AI 영상 크리에이터 -->
+                <div class="course-card bg-white rounded-3xl p-8 border-2 border-red-200 shadow-lg">
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="px-4 py-2 bg-red-100 text-red-700 rounded-full text-sm font-bold">특화 과정</span>
+                        <div class="w-16 h-16 bg-red-100 rounded-2xl flex items-center justify-center">
+                            <i class="fas fa-video text-3xl text-red-600"></i>
+                        </div>
+                    </div>
+
+                    <h3 class="text-2xl font-bold text-gray-800 mb-3">AI 영상 크리에이터</h3>
+                    <p class="text-gray-600 mb-6 leading-relaxed">
+                        AI로 1인 영상 제작 스튜디오 구축
+                    </p>
+
+                    <div class="space-y-3 mb-6">
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-red-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">AI 영상 편집 자동화</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-red-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">AI 보이스오버 & 자막</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-red-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">숏폼 콘텐츠 대량 생산</span>
+                        </div>
+                    </div>
+
+                    <div class="border-t pt-6 mb-6">
+                        <div class="flex justify-between items-center mb-2">
+                            <span class="text-gray-600 text-sm">수강 기간</span>
+                            <span class="font-bold text-gray-800">5주</span>
+                        </div>
+                        <div class="flex justify-between items-center">
+                            <span class="text-gray-600 text-sm">수강료</span>
+                            <span class="font-bold text-gray-800 text-xl">₩700,000</span>
+                        </div>
+                    </div>
+
+                    <button
+                        class="w-full py-4 bg-red-600 text-white rounded-xl font-bold hover:bg-red-700 transition-colors shadow-lg shadow-red-200">
+                        자세히 보기
+                    </button>
+                </div>
+
+                <!-- 신규 과정 4: AI 비즈니스 컨설턴트 -->
+                <div class="course-card bg-white rounded-3xl p-8 border-2 border-emerald-200 shadow-lg">
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="px-4 py-2 bg-emerald-100 text-emerald-700 rounded-full text-sm font-bold">특화
+                            과정</span>
+                        <div class="w-16 h-16 bg-emerald-100 rounded-2xl flex items-center justify-center">
+                            <i class="fas fa-lightbulb text-3xl text-emerald-600"></i>
+                        </div>
+                    </div>
+
+                    <h3 class="text-2xl font-bold text-gray-800 mb-3">AI 비즈니스 컨설턴트</h3>
+                    <p class="text-gray-600 mb-6 leading-relaxed">
+                        기업 AI 전환 전략 수립 전문가
+                    </p>
+
+                    <div class="space-y-3 mb-6">
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-emerald-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">AI 도입 ROI 분석</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-emerald-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">프로세스 자동화 설계</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-emerald-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">AI 전략 로드맵 작성</span>
+                        </div>
+                    </div>
+
+                    <div class="border-t pt-6 mb-6">
+                        <div class="flex justify-between items-center mb-2">
+                            <span class="text-gray-600 text-sm">수강 기간</span>
+                            <span class="font-bold text-gray-800">10주</span>
+                        </div>
+                        <div class="flex justify-between items-center">
+                            <span class="text-gray-600 text-sm">수강료</span>
+                            <span class="font-bold text-gray-800 text-xl">₩1,200,000</span>
+                        </div>
+                    </div>
+
+                    <button
+                        class="w-full py-4 bg-emerald-600 text-white rounded-xl font-bold hover:bg-emerald-700 transition-colors shadow-lg shadow-emerald-200">
+                        자세히 보기
+                    </button>
+                </div>
+
+                <!-- 신규 과정 5: AI 챗봇 개발자 -->
+                <div class="course-card bg-white rounded-3xl p-8 border-2 border-indigo-200 shadow-lg">
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="px-4 py-2 bg-indigo-100 text-indigo-700 rounded-full text-sm font-bold">특화
+                            과정</span>
+                        <div class="w-16 h-16 bg-indigo-100 rounded-2xl flex items-center justify-center">
+                            <i class="fas fa-robot text-3xl text-indigo-600"></i>
+                        </div>
+                    </div>
+
+                    <h3 class="text-2xl font-bold text-gray-800 mb-3">AI 챗봇 개발자</h3>
+                    <p class="text-gray-600 mb-6 leading-relaxed">
+                        고객 응대 자동화 시스템 구축
+                    </p>
+
+                    <div class="space-y-3 mb-6">
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-indigo-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">LangChain & Vector DB</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-indigo-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">멀티채널 챗봇 연동</span>
+                        </div>
+                        <div class="flex items-start gap-2">
+                            <i class="fas fa-check text-indigo-600 mt-1"></i>
+                            <span class="text-sm text-gray-700">대화 품질 최적화</span>
+                        </div>
+                    </div>
+
+                    <div class="border-t pt-6 mb-6">
+                        <div class="flex justify-between items-center mb-2">
+                            <span class="text-gray-600 text-sm">수강 기간</span>
+                            <span class="font-bold text-gray-800">7주</span>
+                        </div>
+                        <div class="flex justify-between items-center">
+                            <span class="text-gray-600 text-sm">수강료</span>
+                            <span class="font-bold text-gray-800 text-xl">₩1,000,000</span>
+                        </div>
+                    </div>
+
+                    <button
+                        class="w-full py-4 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors shadow-lg shadow-indigo-200">
                         자세히 보기
                     </button>
                 </div>
