refactor: Rename ai_master_class.html to master_index.html
- Rename ai_master_class.html to master_index.html
- Update all links in index.html to point to master_index.html
- Course card link updated
- Footer navigation link updated

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         </div>
                     </div>
 
-                    <a href="ai_master_class.html"
+                    <a href="master_index.html"
                         class="block w-full py-4 bg-gradient-to-r from-purple-600 to-pink-600 text-white rounded-xl font-bold hover:from-purple-700 hover:to-pink-700 transition-all shadow-lg shadow-purple-300 text-center">
                         자세히 보기
                     </a>
@@ -721,7 +721,7 @@
                     <h4 class="font-bold mb-4">과정 안내</h4>
                     <ul class="space-y-2 text-sm text-gray-400">
                         <li><a href="#" class="hover:text-white transition-colors">초급 과정</a></li>
-                        <li><a href="ai_master_class.html" class="hover:text-white transition-colors">중급 과정</a></li>
+                        <li><a href="master_index.html" class="hover:text-white transition-colors">중급 과정</a></li>
                         <li><a href="#" class="hover:text-white transition-colors">상급 과정</a></li>
                     </ul>
                 </div>
