--- a/index.html
+++ b/index.html
@@ -568,27 +568,27 @@
                         <span class="px-4 py-2 bg-yellow-100 text-yellow-700 rounded-full text-sm font-bold">관리
                             과정</span>
                         <div class="w-16 h-16 bg-yellow-100 rounded-2xl flex items-center justify-center">
-                            <i class="fas fa-lock text-3xl text-yellow-600"></i>
+                            <i class="fas fa-user-tie text-3xl text-yellow-600"></i>
                         </div>
                     </div>
 
-                    <h3 class="text-2xl font-bold text-gray-800 mb-3">AI 보안 및 윤리</h3>
+                    <h3 class="text-2xl font-bold text-gray-800 mb-3">AI시대의 리더십</h3>
                     <p class="text-gray-600 mb-6 leading-relaxed">
-                        기업 데이터 유출 방지, 저작권 대응, AI 도입 보안 프로토콜
+                        성공적인 AI 도입을 위한 경영진의 의사결정과 조직 혁신 전략
                     </p>
 
                     <div class="space-y-3 mb-6">
                         <div class="flex items-start gap-2">
                             <i class="fas fa-check text-yellow-600 mt-1"></i>
-                            <span class="text-sm text-gray-700">데이터 유출 방지</span>
+                            <span class="text-sm text-gray-700">AI 경영 전략 수립</span>
                         </div>
                         <div class="flex items-start gap-2">
                             <i class="fas fa-check text-yellow-600 mt-1"></i>
-                            <span class="text-sm text-gray-700">저작권 대응 전략</span>
+                            <span class="text-sm text-gray-700">조직 변화 관리</span>
                         </div>
                         <div class="flex items-start gap-2">
                             <i class="fas fa-check text-yellow-600 mt-1"></i>
-                            <span class="text-sm text-gray-700">보안 프로토콜 수립</span>
+                            <span class="text-sm text-gray-700">윤리적 리더십</span>
                         </div>
                     </div>
 
